@@ -43,4 +43,6 @@ if [ -d /etc/X11/xinit/xinitrc.d ] ; then
  unset f
 fi
 
+xscreensaver -no-splash &
+
 exec xmonad
